changed with my name

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # required metdata
-sonar.projectKey=VikashChoudahry_sonarqube-setup-new
-sonar.organization=vikashchoudahry
+sonar.projectKey=Hemanth
+sonar.organization=Hemanth
 sonar.projectVersion=1.1
 sonar.sourceEncoding=UTF-8
 sonar.language=js
